# MurlokVR

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
docs/: MurlokVR_Architecture.docx  MurlokVR_Git_Reference.html  MurlokVR_Wrapper_Cheatsheet.md
src/firmware/: .clippy.toml  Cargo.toml  build.rs  rust-toolchain.toml  rustfmt.toml
src/firmware/.cargo/: config.toml
src/firmware/src/: lib.rs
src/host/driver/: CMakeLists.txt  README.md  simplehmd.vcxproj
src/host/driver/MurlokVR/: driver.vrdrivermanifest
src/host/driver/MurlokVR/resources/input/: MurlokVR_profile.json
src/host/driver/MurlokVR/resources/localization/: localization.json
src/host/driver/MurlokVR/resources/settings/: default.vrsettings
src/host/driver/src/: _temporary.cpp  device_provider.cpp  device_provider.h  hmd_device_driver.cpp  hmd_device_driver.h  hmd_driver_factory.cpp  shared_memory.h  vr_pose_shared.h
src/host/runtime/: Cargo.toml  rustfmt.toml
src/host/runtime/src/: main.rs  shared_data.rs
src/host/runtime/src/shared_memory/: mod.rs
src/host/runtime/src/vr_pose_shared/: mod.rs
src/host/shared-mem/: Cargo.toml
src/host/shared-mem/src/: lib.rs  main.rs
