[package]
name = "murlokvr-firmware"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"      # Minimum Required Rust Version

[[bin]]
name = "murlokvr-firmware"
path = "./src/bin/main.rs" # Entry Point Source File

[dependencies]
# Hardware Abstraction Layer for ESP32-C6
esp-hal = { version = "~1.1", features = ["esp32c6", "log-04", "unstable"] }

# Bootloader Support & Logging Facade
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6", "log-04"] }
log = "0.4"

# Safe Interrupt Handling
critical-section = "1.2.0"

# Prints Backtrace on Panic
esp-backtrace = { version = "0.19.0", features = [
  "esp32c6",       # Target Chip
  "panic-handler", # Catches Panics
  "println",       # Print Panic Info to Serial
] }

# Print to Serial
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }

[profile.dev]
opt-level = "s" # Optimize for Size in Debug (Default Is Too Slow)

[profile.release]
codegen-units = 1        # Single Thread = Better LLVM Optimizations
debug = 2                # Full Debug Info
debug-assertions = false # Disable Debug Assertions for Performance
incremental = false      # Disable Incremental Compilation for Cleaner Builds
overflow-checks = false  # Disable Overflow Checks for Performance
lto = 'fat'              # Whole-Program Link-Time Optimization
opt-level = 's'          # Optimize for Size in Release
